[package]
name = "hasher_rs"
version = "0.1.0"
edition = "2018"
authors = ["Andrew Plaza <dev@andrewplaza.dev>"]

[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch = "master" } 
primitives = { package = "sp-core",  git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, features = ["full_crypto"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2"
